# darkroom

./: .coderabbit.yaml  .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  bootstrap-repo.sh  commitlint.config.mjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: VOUCHED.td
.github/workflows/: ci.yml  pr-title.yml  pr-vouch.yml  vouch-manage.yml
app/: App.tsx  ComposeBar.tsx  DownloadManager.tsx  Gallery.tsx  Rail.tsx  Settings.tsx  TitleBar.tsx  index.css  index.html  main.tsx  theme.css
app/fonts/: README.md
app/lib/: comfy.mock.ts  comfy.replay.test.ts  comfy.test.ts  comfy.ts  compose.test.ts  compose.ts  download.test.ts  download.ts  engine.ts  format.test.ts  format.ts  gate.test.ts  gate.ts  generate.test.ts  generate.ts  models.ts  params.test.ts  params.ts  queue.ts  registry.schema.ts  registry.test.ts  registry.ts  workflow.test.ts  workflow.ts
app/lib/__fixtures__/comfy/: README.md  session-error.json  session-rejected.json  session-success.json
docs/: BACKLOG.md  CLAUDE_CODE_KICKOFF.md  Darkroom Studio (standalone).html  Darkroom Studio.dc.html  Milestone 2 - GitHub issues.md
native/: Cargo.toml  tauri.conf.json
native/.cargo/: config.toml
native/capabilities/: default.json
native/icons/: icon.icns
native/src/: commands.rs  download.rs  downloads.rs  lib.rs  main.rs  paths.rs  sidecar.rs
native/src/engine/: archive.rs  bootstrap.rs  lock.rs  mod.rs  progress.rs
registry/: README.md  registry.test.ts
registry/flux2-klein/: manifest.json  workflow.json
registry/ltx-video/: manifest.json  workflow.json
scripts/: fetch-uv.mjs  record-comfy.mjs  seed-issues.sh
tests/: registry.test.ts
