[package]
name = "darkroom"
version = "0.1.0"
description = "Generate images and video on your own GPU."
authors = ["Darkroom contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sschorer/darkroom"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The _lib suffix avoids a name collision with the binary on Windows.
name = "darkroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
