[package]
name = "darkroom"
version = "0.1.0"
description = "Generate images and video on your own GPU."
authors = ["Darkroom contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sschorer/darkroom"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The _lib suffix avoids a name collision with the binary on Windows.
name = "darkroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Runs `uv`. Not for the plugin's JS API — nothing in the frontend is granted a
# shell permission (capabilities/default.json stays at core:default). It's here
# because it owns the two things a raw std::process::Command gets wrong: it
# resolves `uv-<triple>` to the bundled sidecar the way externalBin lays it out,
# and it sets CREATE_NO_WINDOW so a console doesn't flash on Windows for each of
# the several children a bootstrap spawns.
tauri-plugin-shell = "2"

# Fetches the ComfyUI tarball. rustls rather than the platform TLS stack: it
# keeps the Windows and macOS builds free of an OpenSSL dependency, and the
# hosts we talk to are ours to pin, not the OS trust store's to negotiate.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "charset",
  "http2",
] }
flate2 = "1"
tar = "0.4"

# Opens the logs directory from the Help menu with the OS file manager. Already
# in the tree via tauri-plugin-shell; named here because we call it directly
# rather than through the shell plugin's `open`, which is deprecated (and so a
# clippy `-D warnings` failure) in favour of exactly this.
open = "5"

# The health-poll timer (sidecar.rs). tauri already runs on tokio and reqwest
# needs its reactor; this makes the direct use of `tokio::time` honest rather
# than reaching through a transitive dependency.
tokio = { version = "1", features = ["time"] }

# Digests engine/comfy.lock so `.version` can record *which* pin an install
# came from, not merely which commit. See engine/bootstrap.rs.
sha2 = "0.10"

thiserror = "2"

[dev-dependencies]
# paths.rs tests need a real directory to create into; the layout is only
# proven by touching a filesystem. engine/archive.rs builds tarballs into one.
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
