[package]
name = "darkroom"
version = "0.1.0"
description = "Generate images and video on your own GPU."
authors = ["Darkroom contributors"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sschorer/darkroom"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The _lib suffix avoids a name collision with the binary on Windows.
name = "darkroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Runs `uv`. Not for the plugin's JS API — nothing in the frontend is granted a
# shell permission (capabilities/default.json stays at core:default). It's here
# because it owns the two things a raw std::process::Command gets wrong: it
# resolves `uv-<triple>` to the bundled sidecar the way externalBin lays it out,
# and it sets CREATE_NO_WINDOW so a console doesn't flash on Windows for each of
# the several children a bootstrap spawns.
tauri-plugin-shell = "2"

# Enforces one running Darkroom (ADR-017). It is a hard prerequisite of the
# engine reclaim (ADR-016), not a nicety: a second instance's boot-time
# `reclaim_stale` would find the first instance's PID file, confirm the identity
# (it genuinely is our `main.py`, same start time), and `SIGKILL` a live engine
# mid-generation. Registered first so the second process exits inside the
# plugin's own setup, before ours runs the reclaim.
tauri-plugin-single-instance = "2"

# Fetches the ComfyUI tarball. rustls rather than the platform TLS stack: it
# keeps the Windows and macOS builds free of an OpenSSL dependency, and the
# hosts we talk to are ours to pin, not the OS trust store's to negotiate.
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "charset",
  "http2",
] }
flate2 = "1"
tar = "0.4"

# Opens the logs directory from the Help menu with the OS file manager. Already
# in the tree via tauri-plugin-shell; named here because we call it directly
# rather than through the shell plugin's `open`, which is deprecated (and so a
# clippy `-D warnings` failure) in favour of exactly this.
open = "5"

# The health-poll timer and the process-exit race (sidecar.rs). tauri already
# runs on tokio and reqwest needs its reactor; this makes the direct use of
# `tokio::time` and `tokio::sync::oneshot` honest rather than reaching through a
# transitive dependency. `sync` carries the oneshot the log pump uses to tell the
# health wait the engine died, and `macros` is the `select!` that races that
# signal against the socket poll, so a failed boot fails in seconds, not 120s.
tokio = { version = "1", features = ["time", "sync", "macros"] }

# Digests engine/comfy.lock so `.version` can record *which* pin an install
# came from, not merely which commit. See engine/bootstrap.rs.
sha2 = "0.10"

# Stale-engine reclaim (sidecar.rs, §8.3). A leaked engine after a SIGKILL or a
# crash is only reclaimable by looking the PID up in the process table, and
# doing it right — never killing an innocent process the OS gave the same PID —
# needs each process's start time and command line, cross-platform. That is
# exactly what this reads. Only the `system` feature: we inspect processes, not
# disks, networks, or components, and its Windows sub-features come with it.
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

thiserror = "2"

# The free-space precheck before a weight download (download.rs, §8.6). Reads
# the available bytes on the filesystem holding the models dir via one statvfs;
# the `sync` default feature is all of it, and no async/tokio integration is
# wanted since the call is a single non-blocking syscall.
fs4 = { version = "1", default-features = false, features = ["sync"] }

# Generates the TypeScript mirrors of the IPC types (ADR-018) into
# app/lib/generated/, so the wire contract has one definition instead of a
# hand-kept copy that drifts silently across the FFI boundary. Optional and
# behind the `ts` feature: the derives and their export tests compile only under
# `cargo test --all-features` (where CI regenerates and diffs); a plain `cargo
# build`/bundle never links ts-rs, keeping it out of the shipped binary.
ts-rs = { version = "10", optional = true }

[features]
# On under `cargo test --all-features` (CI, `make rust-test`); off for the
# bundle. Enabling it turns on the `#[derive(TS)]`/`#[ts(export)]` on the IPC
# types and their generation tests.
ts = ["dep:ts-rs"]

[dev-dependencies]
# paths.rs tests need a real directory to create into; the layout is only
# proven by touching a filesystem. engine/archive.rs builds tarballs into one.
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
